# Markdown-ToDo

./: README.md
backend/: .gitignore  Makefile  daos.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py  settings.py
backend/app/: daos.py  database.py  main.py  models.py  services.py
backend/app/routers/: api_router.py  document.py  image.py  user.py
backend/daos/: document.py  image.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 1a60f90c82a2_first_migration.py
backend/routers/: api_router.py  auth.py  document.py  image.py  user.py
backend/services/: database.py  service.py  settings.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/: App.tsx  middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/document/[slug]/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/contexts/: userContext.tsx
frontend/src/services/: auth.service.ts  index.ts
frontend/src/types/: entities.ts  user.ts
