[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ThiagoORuby <trs@ic.ufal.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
cffi = "1.16.0"
click = "8.1.7"
cryptography = "41.0.7"
ecdsa = "0.18.0"
fastapi = "0.105.0"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.6"
mako = "1.3.0"
markupsafe = "2.1.3"
passlib = "1.7.4"
pyasn1 = "0.5.1"
pycparser = "2.21"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pyjwt = "2.8.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
starlette = "0.27.0"
typing-extensions = "4.9.0"
uvicorn = "0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
